--- a/fracment/app/src/main/res/values/colors.xml
+++ b/fracment/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="pnk">#EE82EE</color>
+
+    <color name="green_k">#128C7E</color>
+    <color name="black_k">#000</color>
+    <color name="green1_k">#25D366</color>
 </resources>
