--- a/fracment/app/src/main/res/layout/thefirst_1.xml
+++ b/fracment/app/src/main/res/layout/thefirst_1.xml
@@ -2,18 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="5"
+    android:weightSum="7"
     android:orientation="vertical"
     >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_weight="5"
         android:paddingTop="20sp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:weightSum="5"
+        android:weightSum="4"
         >
         <TextView
             android:text="Wellcome to ALTISSS :v"
@@ -21,18 +21,14 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:textSize="20sp"
-            android:textColor="@color/pnk"
+            android:textColor="@color/blue"
             android:layout_weight="1"
             />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:gravity="center"
-            android:layout_weight="4"
-            android:paddingTop="10dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingBottom="0dp"
+            android:gravity="center_horizontal"
+            android:layout_weight="3"
             >
             <ImageView
                 android:layout_width="wrap_content"
@@ -43,12 +39,31 @@
 
     </LinearLayout>
 
-    <Button
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center_horizontal"
-        android:text="buttom"
-        android:background="@color/colorAccent"
-        />
+        android:layout_weight="2"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:weightSum="3"
+        >
+        <TextView
+            android:text="Nhấn đồng ý và tiếp tục với điều khoản dịch vụ"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:textSize="13dp"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:text="Đồng Ý và Đăng Nhập"
+            android:textColor="@color/white"
+            android:layout_weight="0.9"
+            android:background="@color/blue"
+            android:id="@+id/btn_thefirst"
+            />
+    </LinearLayout>
+
 </LinearLayout>
