--- a/fracment/app/src/main/res/values/colors.xml
+++ b/fracment/app/src/main/res/values/colors.xml
@@ -3,9 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="pnk">#EE82EE</color>
-
-    <color name="green_k">#128C7E</color>
+    <color name="blue">#0000FF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="green">#00CC00</color>
     <color name="black_k">#000</color>
-    <color name="green1_k">#25D366</color>
 </resources>
