--- a/fracment/app/src/main/res/layout/thefirst_4.xml
+++ b/fracment/app/src/main/res/layout/thefirst_4.xml
@@ -62,8 +62,8 @@
             android:layout_height="wrap_content"
             android:text="NEXT"
             android:gravity="center"
-            android:background="@color/blue"
-            android:textColor="@color/white"
+            android:background="@color/green"
+            android:textColor="@color/while1"
             />
     </LinearLayout>
 
